--- a/public/css/styleMul.css
+++ b/public/css/styleMul.css
@@ -475,7 +475,6 @@ body {
   margin-bottom: 40px;
   word-spacing: 4px;
   font-size: 18px;
-  font-weight: bold;
 }
 
 
@@ -513,7 +512,7 @@ body {
   word-spacing: 4px;
 }
 
-.icon-bg-news1 img{
+.news1-img-1 img{
   position: relative;
   width: 85%;
   height: auto;
@@ -529,43 +528,6 @@ body {
   margin-left: 7%;
 }
 
-
-.img-1 {
-  position: absolute;
-}
-
-.img-1 .text-center1 {
-  position: absolute;
-  top: -25%;
-  left: 63%;
-  transform: translate(-50%, -50%);
-  font-size: 30px;
-  font-weight: bold;
-}
-
-.img-1 .text-center2 {
-  position: absolute;
-  top: 0px;
-  left: 65%;
-  transform: translate(-50%, -50%);
-  font-size: 25px;
-}
-
-.kunjungi{
-  position: absolute;
-  left: 63%;
-  top: 25%;
-  border-radius: 15px;
-}
-
-
-.img-1 img {
-  margin-top: -230px;
-  margin-left: 35%;
-  width: 60%;
-  height: 40%;
-
-}
 
 
 .bg-news2{
@@ -592,6 +554,43 @@ body {
   margin-left: 15%;
 }
 
+.news2-img-2 {
+  position: absolute;
+}
+
+
+.news2-img-2 img {
+  margin-top: -230px;
+  margin-left: 35%;
+  width: 60%;
+  height: 40%;
+}
+
+
+.news2-img-2 .isi-img-2 {
+  position: absolute;
+  margin-top : -440px;
+  margin-left: 650px;
+}
+
+.news2-img-2 .card{
+  border-radius: 12px;
+  box-shadow: none;
+  background-color:inherit !important;
+}
+
+.news2-img-2 .card-content span{
+  font-size: 35px;
+  padding-bottom: 10px;
+}
+
+.news2-img-2 .card-content p{
+  font-size: 17px;
+  padding-bottom: 10px;
+  text-align: justify;
+}
+
+
 
 .bg-news3{
   background-image: url("../img/bg/bg-news3.png");
@@ -609,15 +608,119 @@ body {
   margin-left: 20%;
 }
 
+.wadah-news3 .right{
+  margin-right: 40px;
+}
+
+
+.icon-bg3-news3 img{
+  position: absolute;
+  width: 12%;
+  height: auto;
+  margin-top: -15px;
+}
+
+.news3-img-3 {
+  position: absolute;
+}
+
+
+.news3-img-3 img {
+  margin-top: -270px;
+  margin-left: 10%;
+  width: 60%;
+  height: 40%;
+}
+
+.news3-img-3 .isi-img-3 {
+  position: absolute;
+  margin-top : -340px;
+  margin-left: 240px;
+}
+
+.news3-img-3 .card{
+  border-radius: 12px;
+  box-shadow: none;
+  background-color:inherit !important;
+}
+
+.news3-img-3 .card-content span{
+  font-size: 35px;
+  padding-bottom: 10px;
+}
+
+.news3-img-3 .card-content p{
+  font-size: 17px;
+  padding-bottom: 10px;
+  text-align: justify;
+}
+
+
+
 .bg-news4{
   background-image: url("../img/bg/bg-news4.png");
-  background-size: 100% 500px;
-  height: 500px;
+  background-size: 100% 600px;
+  height: 600px;
   background-position: top;
   margin-top: -2px;
   margin-bottom: -2px;
   background-repeat:no-repeat;
 }
+
+.imgline-4 img{
+  position: relative;
+  width: 17%;
+  height: auto;
+  margin-top: 80px;
+  margin-left: 50%;
+}
+
+.icon-bg4-news4 img{
+  position: absolute;
+  width: 6%;
+  height: auto;
+  margin-top: -85px;
+  margin-left: 30%;
+}
+
+.news4-img-4 {
+  position: absolute;
+}
+
+
+.news4-img-4 img {
+  margin-top: -400px;
+  margin-left: 40%;
+  width: 60%;
+  height: 40%;
+}
+
+
+.news4-img-4 .isi-img-4 {
+  position: absolute;
+  margin-top : -455px;
+  margin-left: 770px;
+}
+
+.news4-img-4 .card{
+  border-radius: 12px;
+  box-shadow: none;
+  background-color:inherit !important;
+}
+
+.news4-img-4 .card-content span{
+  font-size: 35px;
+  padding-bottom: 10px;
+}
+
+.news4-img-4 .card-content p{
+  font-size: 17px;
+  padding-bottom: 10px;
+  text-align: justify;
+}
+
+
+
 
 
 
@@ -933,21 +1036,253 @@ body {
     background-repeat:no-repeat;
   }
 
+
   .judul-bg-news1 p{
     margin-top: 70px;
-    margin-left: 150px;
+    margin-left: 160px;
     font-size: 40px;
     font-weight: bold;
     position: absolute;
   }
 
-
   .imgline-1 img{
     position: relative;
     width: 75%;
     height: auto;
-    margin-top: 150px;
+    margin-top: 180px;
     margin-left: 30%;
+  }
+
+
+  .imgline-1 h5{
+    position: absolute;
+    top: 45%;
+    right: 50%;
+    left: 20%;
+    font-size: 25px;
+    line-height: 2;
+    word-spacing: 4px;
+  }
+
+  .news1-img-1 img{
+    position: relative;
+    width: 85%;
+    height: auto;
+    margin-top: 150px;
+    margin-left: 10%;
+  }
+
+
+  .icon-bg-news2 img{
+    position: absolute;
+    width: 10%;
+    height: auto;
+    margin-top: 150px;
+    margin-left: 7%;
+  }
+
+
+  .bg-news2{
+    background-image: url("../img/bg/bg-news2.png");
+    background-size: 100% 600px;
+    height: 600px;
+    background-position: top;
+    background-repeat:no-repeat;
+  }
+
+  .imgline-2 img{
+    position: relative;
+    width: 80%;
+    height: auto;
+    margin-top: 100px;
+    margin-left: 25%;
+  }
+
+  .icon-bg2-news2 img{
+    position: absolute;
+    width: 10%;
+    height: auto;
+    margin-top: 5px;
+    margin-left: 15%;
+  }
+
+  .news2-img-2 {
+    position: absolute;
+  }
+
+
+  .news2-img-2 img {
+    margin-top: -90px;
+    margin-left: 35%;
+    width: 60%;
+    height: 40%;
+  }
+
+
+  .news2-img-2 .isi-img-2 {
+    position: absolute;
+    margin-top : -370px;
+    margin-left: 480px;
+  }
+
+  .news2-img-2 .card{
+    border-radius: 12px;
+    box-shadow: none;
+    background-color:inherit !important;
+  }
+
+  .news2-img-2 .card-content span{
+    font-size: 30px;
+    padding-bottom: 10px;
+  }
+
+  .news2-img-2 .card-content p{
+    font-size: 15px;
+    padding-bottom: 10px;
+    text-align: justify;
+  }
+
+
+
+  .bg-news3{
+    background-image: url("../img/bg/bg-news3.png");
+    background-size: 100% 500px;
+    height: 500px;
+    background-position: top;
+    background-repeat:no-repeat;
+  }
+
+  .imgline-3 img{
+    position: relative;
+    width: 80%;
+    height: auto;
+    margin-top: 80px;
+    margin-left: 20%;
+  }
+
+  .wadah-news3 .right{
+    margin-right: 40px;
+  }
+
+
+  .icon-bg3-news3 img{
+    position: absolute;
+    width: 12%;
+    height: auto;
+    margin-top: -15px;
+  }
+
+  .news3-img-3 {
+    position: absolute;
+  }
+
+
+  .news3-img-3 img {
+    margin-top: -170px;
+    margin-left: 10%;
+    width: 60%;
+    height: 40%;
+  }
+
+  .news3-img-3 .isi-img-3 {
+    position: absolute;
+    margin-top : -300px;
+    margin-left: 200px;
+  }
+
+  .news3-img-3 .card{
+    border-radius: 12px;
+    box-shadow: none;
+    background-color:inherit !important;
+  }
+
+  .news3-img-3 .card-content span{
+    font-size: 30px;
+    padding-bottom: 10px;
+  }
+
+  .news3-img-3 .card-content p{
+    font-size: 15px;
+    padding-bottom: 10px;
+    text-align: justify;
+  }
+
+
+
+  .bg-news4{
+    background-image: url("../img/bg/bg-news4.png");
+    background-size: 100% 280px;
+    height: 280px;
+    background-position: top;
+    margin-top: -2px;
+    margin-bottom: -2px;
+    background-repeat:no-repeat;
+  }
+
+  .imgline-4 img{
+    position: relative;
+    width: 17%;
+    height: auto;
+    margin-top: 100px;
+    margin-left: 50%;
+  }
+
+  .icon-bg4-news4 img{
+    position: absolute;
+    width: 6%;
+    height: auto;
+    margin-top: -40px;
+    margin-left: 30%;
+  }
+
+  .news4-img-4 {
+    position: absolute;
+  }
+
+
+  .news4-img-4 img {
+    margin-top: -300px;
+    margin-left: 36%;
+    width: 68%;
+    height: 80%;
+  }
+
+
+  .news4-img-4 .isi-img-4 {
+    position: absolute;
+    margin-top : -400px;
+    margin-left: 570px;
+  }
+
+  .news4-img-4 .card{
+    border-radius: 12px;
+    box-shadow: none;
+    background-color:inherit !important;
+  }
+
+  .news4-img-4 .card-content span{
+    font-size: 30px;
+    padding-bottom: 10px;
+  }
+
+  .news4-img-4 .card-content p{
+    font-size: 15px;
+    padding-bottom: 10px;
+    text-align: justify;
+  }
+
+}
+
+
+
+@media screen and (max-width: 640px){
+
+  .about4 h6{
+    line-height: 1.5;
+    margin-bottom: 35px;
+    word-spacing: 1px;
+    font-size: 12px;
+    font-weight: bold;
   }
 
   .imgline-1 h5{
@@ -955,26 +1290,9 @@ body {
     top: 45%;
     right: 50%;
     left: 20%;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 2;
     word-spacing: 4px;
-  }
-
-  .icon-bg-news1 img{
-    position: relative;
-    width: 100%;
-    height: auto;
-    margin-top: 200px;
-    margin-left: 1%;
-  }
-
-
-  .icon-bg-news2 img{
-    position: absolute;
-    width: 12%;
-    height: auto;
-    margin-top: 150px;
-    margin-left: 7%;
   }
 
 
@@ -1067,41 +1385,258 @@ body {
   }
 
 
-
-
-
-}
-
-
-@media screen and (max-width: 640px){
-
-  .about4 h6{
-    line-height: 1.5;
-    margin-bottom: 35px;
-    word-spacing: 1px;
-    font-size: 12px;
-    font-weight: bold;
+  .bg-news1{
+    background-image: url("../img/bg/bg-news1.png");
+    background-size: 100% 370px;
+    height: 370px;
+    background-position: top;
+    background-repeat:no-repeat;
   }
+
+
+  .judul-bg-news1 p{
+    margin: 60px 90px 0px 90px;
+    font-size: 33px;
+    font-weight: bold;
+    position: absolute;
+  }
+
+  .imgline-1 img{
+    position: relative;
+    width: 0%;
+    height: auto;
+    margin-top: 180px;
+    margin-left: 30%;
+  }
+
 
   .imgline-1 h5{
     position: absolute;
-    top: 45%;
-    right: 50%;
-    left: 20%;
-    font-size: 18px;
+    top: 30%;
+    right: 0%;
+    left: 30%;
+    font-size: 20px;
     line-height: 2;
     word-spacing: 4px;
   }
 
-  .judul-bg-news1 p{
-    margin-top: 70px;
-    margin-left: 70px;
-    font-size: 40px;
-    font-weight: bold;
+  .news1-img-1 img{
+    position: relative;
+    width: 50%;
+    height: auto;
+    margin-top: 43px;
+    margin-left: 50%;
+  }
+
+
+  .icon-bg-news2 img{
+    position: absolute;
+    width: 17%;
+    height: auto;
+    margin-top: 150px;
+    margin-left: 7%;
+  }
+
+
+  .bg-news2{
+    background-image: url("../img/bg/bg-news2.png");
+    background-size: 100% 600px;
+    height: 600px;
+    background-position: top;
+    background-repeat:no-repeat;
+  }
+
+  .imgline-2 img{
+    position: relative;
+    width: 0%;
+    height: auto;
+    margin-top: 100px;
+    margin-left: 25%;
+  }
+
+  .icon-bg2-news2 img{
+    position: absolute;
+    width: 17%;
+    height: auto;
+    margin-top: 5px;
+    margin-left: 7%;
+  }
+
+  .news2-img-2 {
     position: absolute;
   }
 
+
+  .news2-img-2 img {
+    margin-top: 50px;
+    margin-left: 5%;
+    width: 95%;
+    height: 90%;
+  }
+
+
+  .news2-img-2 .isi-img-2 {
+    position: absolute;
+    margin-top : -330px;
+    margin-left: 130px;
+    padding-right: 40px;
+  }
+
+  .news2-img-2 .card{
+    border-radius: 12px;
+    box-shadow: none;
+    background-color:inherit !important;
+  }
+
+  .news2-img-2 .card-content span{
+    font-size: 30px;
+    padding-bottom: 10px;
+  }
+
+  .news2-img-2 .card-content p{
+    font-size: 15px;
+    padding-bottom: 10px;
+    text-align: justify;
+  }
+
+
+
+  .bg-news3{
+    background-image: url("../img/bg/bg-news3.png");
+    background-size: 100% 360px;
+    height: 360px;
+    background-position: top;
+    background-repeat:no-repeat;
+  }
+
+  .imgline-3 img{
+    position: relative;
+    width: 0%;
+    height: auto;
+    margin-top: 80px;
+    margin-left: 20%;
+  }
+
+  .wadah-news3 .right{
+    margin-right: 10px;
+  }
+
+
+  .icon-bg3-news3 img{
+    position: absolute;
+    width: 17%;
+    height: auto;
+    margin-top: 100px;
+  }
+
+  .news3-img-3 {
+    position: absolute;
+  }
+
+
+  .news3-img-3 img {
+    margin-top: -70px;
+    margin-left: 0%;
+    width: 80%;
+    height: 280px;
+  }
+
+  .news3-img-3 .isi-img-3 {
+    position: absolute;
+    margin-top : -290px;
+    margin-left: 10px;
+    padding-right: 170px;
+  }
+
+  .news3-img-3 .card{
+    border-radius: 12px;
+    box-shadow: none;
+    background-color:inherit !important;
+  }
+
+  .news3-img-3 .card-content span{
+    font-size: 30px;
+    padding-bottom: 10px;
+  }
+
+  .news3-img-3 .card-content p{
+    font-size: 15px;
+    padding-bottom: 10px;
+    text-align: justify;
+  }
+
+
+
+  .bg-news4{
+    background-image: url("../img/bg/bg-news4.png");
+    background-size: 100% 340px;
+    height: 340px;
+    background-position: top;
+    margin-top: -2px;
+    margin-bottom: -2px;
+    background-repeat:no-repeat;
+  }
+
+  .imgline-4 img{
+    position: relative;
+    width: 0%;
+    height: auto;
+    margin-top: 80px;
+    margin-left: 50%;
+  }
+
+  .icon-bg4-news4 img{
+    position: absolute;
+    width: 12%;
+    height: auto;
+    margin-top: -10px;
+    margin-left: 8%;
+  }
+
+  .news4-img-4 {
+    position: absolute;
+  }
+
+
+  .news4-img-4 img {
+    margin-top: -160px;
+    margin-left: 2%;
+    width: 100%;
+    height: 550px;
+  }
+
+
+  .news4-img-4 .isi-img-4 {
+    position: absolute;
+    margin-top : -350px;
+    margin-left: 140px;
+    padding-right: 40px;
+  }
+
+  .news4-img-4 .card{
+    border-radius: 12px;
+    box-shadow: none;
+    background-color:inherit !important;
+  }
+
+  .news4-img-4 .card-content span{
+    font-size: 30px;
+    padding-bottom: 10px;
+  }
+
+  .news4-img-4 .card-content p{
+    font-size: 15px;
+    padding-bottom: 10px;
+    text-align: justify;
+  }
+
+
+
+
+
 }
+
+
 
 @media screen and (max-width: 560px){
   .row .line1{
